# flaskapp

./: .gitignore  MANIFEST.in  README.md  server.py  setup.py  start.cmd  start.sh
casio_rbk/: casio_rbk.py  patch_name.py
casio_rbk/patch_data/: README.md
client/: package.json  rollup.config.js
client/db/: slots.json
client/public/: config.json  formout.txt  index.html
client/scripts/: client_http.js  utils.js
client/src/: App.svelte  Classic.svelte  LibCtrl.svelte  Pan.svelte  RegSlot.svelte  Volume.svelte  main.js  stores.js
client/src-tauri/: Cargo.toml  client.toml  tauri.conf.json
client/src-tauri/cfg/: client.toml
client/src-tauri/db/: files.json  names.json  patch_info.json  patchinfo.json  slots.json
client/src-tauri/file/: Layer Mute Test 1.RBK  Layer Mute Test 1_zero.RBK  Layer Mute Test 2.RBK
client/src-tauri/icons/: icon.icns
client/src-tauri/rbk_output/: .dummy.RBK  Drum Panning Test 1.RBK  Panning Test.RBK
client/src-tauri/server/: Python  libcrypto.1.1.dylib  libreadline.8.dylib  libssl.1.1.dylib  server
client/src-tauri/server/casio_rbk/patch_data/: CT-X5000 tone.csv
client/src-tauri/server/patch_data/: CT-X5000 tone.csv  README.md
client/src-tauri/src/: main.rs
client/src-tauri/ui/public/: config.json  global.css  index.html  init.json
db/: patchinfo.json  slots.json
file/: Layer Mute Test 1.RBK  Layer Mute Test 2.RBK  Panning Test.RBK
release/: metadata.json
scripts/: json-metadata.mjs  move-binary.js  package.json
server/: MANIFEST.in  casio_rbk.py  install.py  patch_name.py  rbk_server.py  server.py  setup.py
(+1 files in other folders)
