[package]
name = "client"
version = "0.1.0"
description = "RBK Mixer Client"
authors = ["Miguel D. Guerrero"]
license = ""
repository = ""
default-run = "client"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "http-all", "path-all", "shell-execute"] }

# [dependencies.pyo3]
# version = "0.14.5"
# features = ["auto-initialize"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
