[package]
name = "client"
version = "0.1.0"
description = "RBK Mixer Client"
authors = ["Miguel D. Guerrero"]
license = ""
repository = ""
default-run = "client"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
# blake2 = "0.10.4"
# hex = "0.4.3"
serde = "1.0.130"
serde_json = "1.0.68"
tauri = { version = "1.0.2", features = ["dialog-all", "http-all", "path-all", "reqwest-client", "shell-execute", "shell-sidecar", "updater"] }

# [dependencies.pyo3]
# version = "0.14.5"
# features = ["auto-initialize"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
